Fix authentication state and add Proof of Putt branding

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/POP.Proof_Of_Putt.Log.576.png" />
+    <link rel="shortcut icon" href="/POP.Proof_Of_Putt.Log.576.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Proof of Putt</title>
   </head>
   <body>
     <div id="root"></div>
