--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="//code.tidio.co/iglmsyo1frn88suf4joqpsrtyazvt2gj.js" async></script>
   </body>
 </html>
